# login-api

./: .gitignore  pyproject.toml
aplicacao/: __init__.py
contextos/dominio/agregados/: __init__.py  usuario.py
contextos/dominio/comandos/: usuario.py
contextos/dominio/entidades/: usuario.py
contextos/dominio/eventos/: __init__.py  usuario.py
contextos/dominio/objetos_de_valor/: usuario.py
contextos/pontos_de_entrada/comandos/: __init__.py  usuario.py
libs/: usuario.py
testes/usuario/dominio/agregado/: test_usuario.py
