[tool.poetry]
name = "login-api"
version = "0.1.0"
description = ""
authors = ["Luciano Gomes <luciano@pontotel.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
dataclass-type-validator = "^0.1.2"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
